--- a/css/style.css
+++ b/css/style.css
@@ -7,21 +7,20 @@ html, body {
 
 .page-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 2fr;
 }
 
 header {
-    grid-area: 1 / 1 / 2 / 3;
+
 }
 
 .game-container {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-row: 3 / 4;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
 }
 
 .player-container {
-    grid-area: 2 / 2 / 3 / 3;
+    grid-row: 2 / 3;
 }
