--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ header {
     grid-template-rows: repeat(3, 1fr);
     background-color: white;
     width: 50vw;
+    border-radius: 5px;
 }
 
 .game-array {
