--- a/css/style.css
+++ b/css/style.css
@@ -10,38 +10,46 @@ html, body {
 .page-container {
     display: grid;
     grid-template-rows: 15vh 10vh 60vh 15vh;
-    background-color: black;
+    grid-template-columns: 1fr 1fr;
+    background-image: url(../img/background.jpg);
+    background-size: cover;
     justify-content: center;
     font-family: 'Nunito', sans-serif;
 }
 
 header {
     height: 100%;
-    color: white;
+    color: rgb(35, 4, 72);
     text-align: center;
+    grid-area: 1 / 1 / 2 / 3;
 }
 
 .game-container {
-    grid-row: 3 / 4;
+    margin: auto;
+    grid-area: 3 / 1 / 4 / 3;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
     width: 50vw;
+    height: 100%;
     border-radius: 5px;
 }
 
 .game-array {
-    border: 1px solid black;
+    border: 1px solid rgb(35, 4, 72);
     font-size: 300%;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: rgb(35, 4, 72);
 }
 
 .player-container {
-    grid-row: 2 / 3;
-    color: white;
+    grid-area: 2 / 1 / 3 / 3;
+    color: rgb(35, 4, 72);
+    font-size: 20px;
+    font-weight: 700;
     text-align: center;
 }
 
@@ -49,4 +57,32 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    grid-area: 4 / 1 / 5 / 3;
+}
+
+#reset-btn {
+    background-color: rgb(35, 4, 72);
+    border: none;
+    border-radius: 5px;
+    padding: 10px 17px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 15px;
+    color: white;
+}
+
+footer {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+footer > a {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+img {
+    max-width: 40px;
+    max-height: 40px;
+    margin: 10px;
 }
